@@ -26,6 +26,7 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
 import java.awt.event.MouseMotionListener;
+import java.lang.invoke.MethodHandles;
 
 import javax.swing.JMenuItem;
 import javax.swing.JPopupMenu;
@@ -35,7 +36,8 @@ import javax.swing.SortOrder;
 import javax.swing.table.JTableHeader;
 import javax.swing.table.TableModel;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.jdesktop.swingx.JXTable;
 import org.jdesktop.swingx.JXTableHeader;
 import org.jdesktop.swingx.decorator.ColorHighlighter;
@@ -50,7 +52,7 @@ import com.dbxtune.utils.SwingUtils;
 public class AlarmSettingsTable extends JXTable
 {
 	private static final long serialVersionUID = 0L;
-	private static Logger _logger = Logger.getLogger(AlarmSettingsTable.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 	
 //	protected int           _lastTableHeaderPointX = -1;
 	protected int           _lastTableHeaderColumn = -1;
@@ -283,7 +285,7 @@ public class AlarmSettingsTable extends JXTable
 					for (int r=0; r<tm.getRowCount(); r++)
 					{
 						if (tm.isCellEditable(r, col))
-							tm.setValueAt(new Boolean(true), r, col);
+							tm.setValueAt(Boolean.valueOf(true), r, col);
 					}
 				}
 			}
@@ -301,7 +303,7 @@ public class AlarmSettingsTable extends JXTable
 					for (int r=0; r<tm.getRowCount(); r++)
 					{
 						if (tm.isCellEditable(r, col))
-							tm.setValueAt(new Boolean(false), r, col);
+							tm.setValueAt(Boolean.valueOf(false), r, col);
 					}
 				}
 			}
