@@ -21,6 +21,7 @@
 package com.dbxtune.cm.postgres;
 
 import java.awt.event.MouseEvent;
+import java.lang.invoke.MethodHandles;
 import java.math.BigDecimal;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -31,16 +32,16 @@ import java.util.List;
 
 import javax.naming.NameNotFoundException;
 
-import org.apache.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import com.dbxtune.ICounterController;
 import com.dbxtune.IGuiController;
 import com.dbxtune.central.pcs.CentralPersistReader;
 import com.dbxtune.cm.CounterSample;
 import com.dbxtune.cm.CounterSetTemplates;
-import com.dbxtune.cm.CountersModel;
 import com.dbxtune.cm.CounterSetTemplates.Type;
-import com.dbxtune.cm.postgres.gui.CmPgPidWaitPanel;
+import com.dbxtune.cm.CountersModel;
 import com.dbxtune.cm.postgres.gui.CmPgSrvWaitPanel;
 import com.dbxtune.config.dict.MonTablesDictionary;
 import com.dbxtune.config.dict.MonTablesDictionaryManager;
@@ -60,7 +61,7 @@ import com.dbxtune.utils.Ver;
 public class CmPgSrvWait
 extends CountersModel
 {
-	private static Logger        _logger          = Logger.getLogger(CmPgSrvWait.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 	private static final long    serialVersionUID = 1L;
 
 	public static final String   CM_NAME          = CmPgSrvWait.class.getSimpleName();
@@ -436,7 +437,7 @@ extends CountersModel
 
 				Double sum_wait_count = dataMap.get(event_type);
 				if (sum_wait_count == null)
-					sum_wait_count = new Double(0);
+					sum_wait_count = Double.valueOf(0);
 
 				sum_wait_count += wait_count;
 				
