@@ -20,6 +20,7 @@
  ******************************************************************************/
 package com.dbxtune.hostmon;
 
+import java.lang.invoke.MethodHandles;
 import java.math.BigDecimal;
 import java.sql.ResultSetMetaData;
 import java.sql.Time;
@@ -33,10 +34,11 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Properties;
 
-import org.apache.log4j.Logger;
-import org.apache.log4j.PropertyConfigurator;
+import org.apache.logging.log4j.Level;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.core.config.Configurator;
 
 import com.dbxtune.gui.ResultSetTableModel;
 import com.dbxtune.utils.Configuration;
@@ -48,7 +50,7 @@ import com.dbxtune.utils.StringUtil;
 public class HostMonitorMetaData
 implements ResultSetMetaData
 {
-	private static Logger _logger = Logger.getLogger(HostMonitorMetaData.class);
+	private static final Logger _logger = LogManager.getLogger(MethodHandles.lookup().lookupClass());
 
 	/** "\\s+" - \s+ Any Whitespace character: [ \t\n\x0B\f\r], then the '+' is just multiple times */
 	public final static String REGEXP_IS_SPACE = "\\s+"; 
@@ -896,14 +898,14 @@ implements ResultSetMetaData
 		{
 			switch (sqlType)
 			{
-			case java.sql.Types.BIT:          return new Boolean(strVal);
-			case java.sql.Types.TINYINT:      return new Byte(Byte.parseByte(strVal));
-			case java.sql.Types.SMALLINT:     return new Short(Short.parseShort(strVal));
-			case java.sql.Types.INTEGER:      return new Integer(strVal);
-			case java.sql.Types.BIGINT:       return new Long(strVal);
-			case java.sql.Types.FLOAT:        return new Float(strVal);
-			case java.sql.Types.REAL:         return new Float(strVal);
-			case java.sql.Types.DOUBLE:       return new Double(normalizeNumber(strVal));
+			case java.sql.Types.BIT:          return Boolean.valueOf(strVal);
+			case java.sql.Types.TINYINT:      return Byte   .valueOf(Byte.parseByte(strVal));
+			case java.sql.Types.SMALLINT:     return Short  .valueOf(Short.parseShort(strVal));
+			case java.sql.Types.INTEGER:      return Integer.valueOf(strVal);
+			case java.sql.Types.BIGINT:       return Long   .valueOf(strVal);
+			case java.sql.Types.FLOAT:        return Float  .valueOf(strVal);
+			case java.sql.Types.REAL:         return Float  .valueOf(strVal);
+			case java.sql.Types.DOUBLE:       return Double .valueOf(normalizeNumber(strVal));
 			case java.sql.Types.NUMERIC:      return new BigDecimal(normalizeNumber(strVal)).setScale(scale, BigDecimal.ROUND_HALF_EVEN);
 			case java.sql.Types.DECIMAL:      return new BigDecimal(normalizeNumber(strVal)).setScale(scale, BigDecimal.ROUND_HALF_EVEN);
 			case java.sql.Types.CHAR:         return new String(strVal);
@@ -925,7 +927,7 @@ implements ResultSetMetaData
 			case java.sql.Types.CLOB:         return val;
 //			case java.sql.Types.REF:          return "-REF-";
 //			case java.sql.Types.DATALINK:     return "-DATALINK-";
-			case java.sql.Types.BOOLEAN:      return new Boolean(strVal);
+			case java.sql.Types.BOOLEAN:      return Boolean.valueOf(strVal);
 			default:
 				throw new RuntimeException("Unsupported data type was found in the dictionary java.sql.Types '"+sqlType+"', value='"+val+"'.");
 			}
@@ -959,14 +961,14 @@ implements ResultSetMetaData
 
 		switch (sqlType)
 		{
-		case java.sql.Types.BIT:          return new Boolean(false);
-		case java.sql.Types.TINYINT:      return new Byte(Byte.parseByte("0"));
-		case java.sql.Types.SMALLINT:     return new Short(Short.parseShort("0"));
-		case java.sql.Types.INTEGER:      return new Integer(0);
-		case java.sql.Types.BIGINT:       return new Long(0);
-		case java.sql.Types.FLOAT:        return new Float(0);
-		case java.sql.Types.REAL:         return new Float(0);
-		case java.sql.Types.DOUBLE:       return new Double(0);
+		case java.sql.Types.BIT:          return Boolean.valueOf(false);
+		case java.sql.Types.TINYINT:      return Byte   .valueOf(Byte.parseByte("0"));
+		case java.sql.Types.SMALLINT:     return Short  .valueOf(Short.parseShort("0"));
+		case java.sql.Types.INTEGER:      return Integer.valueOf(0);
+		case java.sql.Types.BIGINT:       return Long   .valueOf(0);
+		case java.sql.Types.FLOAT:        return Float  .valueOf(0);
+		case java.sql.Types.REAL:         return Float  .valueOf(0);
+		case java.sql.Types.DOUBLE:       return Double .valueOf(0);
 		case java.sql.Types.NUMERIC:      return new BigDecimal(0).setScale(scale, BigDecimal.ROUND_HALF_EVEN);
 		case java.sql.Types.DECIMAL:      return new BigDecimal(0).setScale(scale, BigDecimal.ROUND_HALF_EVEN);
 		case java.sql.Types.CHAR:         return "";
@@ -988,7 +990,7 @@ implements ResultSetMetaData
 		case java.sql.Types.CLOB:         return "";
 //		case java.sql.Types.REF:          return "-REF-";
 //		case java.sql.Types.DATALINK:     return "-DATALINK-";
-		case java.sql.Types.BOOLEAN:      return new Boolean(false);
+		case java.sql.Types.BOOLEAN:      return Boolean.valueOf(false);
 		default:
 			throw new RuntimeException("Unsupported data type was found in the dictionary java.sql.Types '"+sqlType+"', value='"+val+"'.");
 		}
@@ -1659,13 +1661,8 @@ implements ResultSetMetaData
 	
 	public static void main(String[] args)
 	{
-		Properties log4jProps = new Properties();
-		//log4jProps.setProperty("log4j.rootLogger", "INFO, A1");
-		log4jProps.setProperty("log4j.rootLogger", "DEBUG, A1");
-		log4jProps.setProperty("log4j.appender.A1", "org.apache.log4j.ConsoleAppender");
-		log4jProps.setProperty("log4j.appender.A1.layout", "org.apache.log4j.PatternLayout");
-		log4jProps.setProperty("log4j.appender.A1.layout.ConversionPattern", "%d - %-5p - %-30c{1} - %m%n");
-		PropertyConfigurator.configure(log4jProps);
+		// Set Log4j Log Level
+		Configurator.setRootLevel(Level.DEBUG);
 
 		Configuration conf = new Configuration();
 		conf.setProperty("hostmon.udc.TestXXX.osCommand",                  "iostat -xdzk 3");
