@@ -73,7 +73,7 @@ public class JfreeChartStackedBarTest2 extends ApplicationFrame
 
 			for (int j = 1; j <= 5; j++)
 			{
-//				double    val  = new Double(i);
+//				double    val  = Double.valueOf(i);
 				double    val  = ThreadLocalRandom.current().nextDouble(1, 30);
 
 				String    grp  = "ZERO";
